# python-project-50

./: Makefile  README.md  demo.cast  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  diff_builder.py  gendiff.py  parsers.py
hexlet_code/scripts/: diff_builder.py  gendiff.py
hexlet_code/scripts/formatters/: __init__.py  plain.py  stylish.py
tests/: test_10_diff.py  test_gendiff.py
