[project]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
gendiff = "hexlet_code.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[toll.ruff]
line-length = 80

[lint.per-file-ignores]
"__init__.py" = ["F401"]

[lint]
preview = true
select = ["E", "F", "I", "C90"]