[project]
name = "gendiff"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyYAML >=6.0",
]


[project.optional-dependencies]
dev = [
    "pytest >=7.0.0",
    "pytest-cov >=4.0.0",
    "ruff >=0.1.0",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest >=7.0.0",
    "pytest-cov >=4.0.0",
    "ruff >=0.1.0",
]

[tool.ruff]
line-length = 80

[lint.per-file-ignores]
"__init__.py" = ["F401"]

[lint]
preview = true
select = ["E", "F", "I", "C90"]
